--- a/source/scss/foundation/_typography.scss
+++ b/source/scss/foundation/_typography.scss
@@ -35,51 +35,29 @@ p {
 }
 
 
-h1 {
-  font-size: 46px;
-  /* 2x body copy size = 32px */
+h1, .h1 {
+  font-size: 36px;
   line-height: 1;
-  /* 45px / 36px */
-  @include regular-font;
-}
-.h1 {
-  font-size: 46px;
-  /* 2x body copy size = 32px */
-  line-height: 1;
-  /* 45px / 36px */
   @include regular-font;
 }
 
+
 @media (min-width: map_get($grid-breakpoints, sm)) {
-  h1 {
+  h1, .h1 {
     font-size: 50px;
-    /* 2.5x body copy size = 40px */
-    line-height: 1;
-  }
-  .h1 {
-    font-size: 50px;
-    /* 2.5x body copy size = 40px */
     line-height: 1;
   }
 }
 
 @media (min-width: map_get($grid-breakpoints, lg)) {
-  h1 {
+  h1, .h1 {
     font-size: 60px;
-    /* 3x body copy size = 48px */
     line-height: 1;
-    /* keep to a multiple of the 20px line height and something more appropriate for display headings */
-  }
-  .h1 {
-    font-size: 60px;
-    /* 3x body copy size = 48px */
-    line-height: 1;
-    /* keep to a multiple of the 20px line height and something more appropriate for display headings */
   }
 }
 
 h2, .h2 {
-  font-size: 46px;
+  font-size: 36px;
   line-height: 1;
   @include regular-font;
 }
@@ -99,7 +77,7 @@ h2, .h2 {
 }
 
 h3, .h3 {
-  font-size: 46px;
+  font-size: 36px;
   line-height: 1;
   @include regular-font;
 }
@@ -121,7 +99,7 @@ h3, .h3 {
 }
 
 h4, .h4 {
-  font-size: 46px;
+  font-size: 36px;
   line-height: 1;
   @include regular-font;
 }
@@ -144,7 +122,7 @@ h4, .h4 {
 }
 
 h5, .h5 {
-  font-size: 46px;
+  font-size: 36px;
   line-height: 1;
   @include regular-font;
 }
