cleaned up js and fixed home button bug

--- a/source/scss/sections/_header.scss
+++ b/source/scss/sections/_header.scss
@@ -26,7 +26,8 @@ header .fixed-header {
  right: 30px;
  top: 50%;
  height: 98px;
- width: 50px;
+ width: 55px;
+ text-align: right;
  margin-top: -49px;
  a.h1 {
   font-size: 90px;
