--- a/source/scss/foundation/_typography.scss
+++ b/source/scss/foundation/_typography.scss
@@ -9,7 +9,7 @@ body {
   /* equivalent to 20px */
 }
 
-p {
+p, .body-font {
   font-size: 28px;
   /* equivalent to 16px */
   line-height: 1.4;
@@ -18,7 +18,7 @@ p {
 }
 
 @media (min-width: map_get($grid-breakpoints, sm)) {
-  body, p {
+  body, p, .body-font {
     font-size: 32px;
     /* equivalent to 16px */
     line-height: 1.4;
@@ -26,7 +26,7 @@ p {
   }
 }
 @media (min-width: map_get($grid-breakpoints, lg)) {
-  body, p {
+  body, p, .body-font {
     font-size: 46px;
     /* equivalent to 16px */
     line-height: 1.4;
