--- a/source/scss/pages/_portfolio.scss
+++ b/source/scss/pages/_portfolio.scss
@@ -41,6 +41,12 @@
     animation-duration: 1.5s;
     animation-name: fadeInOut;
     @include regular-font;
+    span {
+      display: block;
+      font-size: 28px;
+      margin-top: 15px;
+      color: darken($color-dark-gray, 10%);
+    }
   }
 }
 
