--- a/source/scss/pages/_diary.scss
+++ b/source/scss/pages/_diary.scss
@@ -87,6 +87,7 @@
   top: 0;
   cursor: url('/img/cursor-pointer.png') 31 23,auto;
   background-size: cover;
+  -webkit-tap-highlight-color: rgba(0,0,0,0); 
   &.off {
     display: none;
   }
